[build-system]
requires = [
    "setuptools >= 60",
    "wheel >= 0.30.0",
    "setuptools_scm >= 8.0",

    # Below copied from scipy https://github.com/scipy/scipy/blob/main/pyproject.toml
    "Cython>=0.29.35,!=3.0.3",  # when updating version, also update check in meson.build

    # default numpy requirements
    "numpy==1.22.4; python_version<='3.10' and platform_python_implementation != 'PyPy'",
    "numpy==1.23.2; python_version=='3.11' and platform_python_implementation != 'PyPy'",
    "numpy>=1.26.0,<1.27; python_version=='3.12'",

    # PyPy requirements; 1.25.0 was the first version to have pypy-3.9 wheels,
    # and 1.25.0 also changed the C API target to 1.19.x, so no longer a need
    # for an exact pin.
    "numpy>=1.25.0; python_version>='3.9' and platform_python_implementation=='PyPy'",

    # For Python versions which aren't yet officially supported, we specify an
    # unpinned NumPy which allows source distributions to be used and allows
    # wheels to be used as soon as they become available.
    # Python 3.13 has known issues that are only fixed in numpy 2.0.0.dev0
    "numpy>=2.0.0.dev0; python_version>='3.13'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/qoi/_version.py"
write_to_template = "__version__ = \"{version}\""

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
# skip musl and ignore the non-standard linux builds
skip = "*-musllinux_* *s390x* *ppc64le*"
build-frontend = "build"
environment = "USE_CYTHON=1"
build-verbosity = 3
