[build-system]
requires = [
    "setuptools >= 60",
    "wheel >= 0.30.0",
    "setuptools_scm >= 8.0",
    "Cython>=3.0.8",
    # Below copied from scipy https://github.com/scipy/scipy/blob/main/pyproject.toml

    # numpy requirement for wheel builds for distribution on PyPI - building
    # against 2.x yields wheels that are also compatible with numpy 1.x at
    # runtime.
    # Note that building against numpy 1.x works fine too - users and
    # redistributors can do this by installing the numpy version they like and
    # disabling build isolation.
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/qoi/_version.py"
write_to_template = "__version__ = \"{version}\""

[tool.cibuildwheel]
test-requires = "pytest pillow"
test-command = "pytest {project}/tests"
build = "cp39-* cp310-* cp311-* cp312-*"
# skip musl and ignore the non-standard linux builds
skip = "*-musllinux_* *s390x* *ppc64le* *i686*"
build-frontend = "build"
environment = {USE_CYTHON="1"}
