[metadata]
name = qoi
author = kodonnell
author_email = kodonnell@users.noreply.github.com
description = A simpler wrapper around qoi (https://github.com/phoboslab/qoi)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kodonnell/qoi
project_urls =
    Bug Tracker = https://github.com/kodonnell/qoi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Processing
packages = qoi
python_requires = >=3.6
license = MIT
keywords = qoi

[options]
zip_safe = False
python_requires = >=3.6
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
